@@ -1,6 +1,10 @@
 UNRELEASED, S3QL TIP
 
   * s3qlcp now also copies extended attributes.
+  
+  * s3qlcp no longer generates incorrect block reference counts when
+    copying a file that has identical blocks (i.e., that can be
+    de-duplicated within itself). 
 
 2011-11-20, S3QL 1.6
 
